--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>airtaskers-pro</title>
+  
+
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
   </body>
 </html>
